--- a/Explorador_pdf.ipynb
+++ b/Explorador_pdf.ipynb
@@ -29,11 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fpdf import FPDF\n",
-    "\n",
     "class PDF(FPDF):\n",
-    "    def header(self):\n",
-    "        # El código del header permanece igual\n",
+    "    def header(self):        \n",
     "        page_width = self.w\n",
     "        page_height = self.h\n",
     "        \n",
@@ -59,7 +56,7 @@
     "\n",
     "    def footer(self):\n",
     "        self.set_y(-15)\n",
-    "        #self.set_font('Arial', '', 8)\n",
+    "        self.set_font('Arial', '', 8)\n",
     "        self.cell(0, 10, 'Page ' + str(self.page_no()) + '/{nb}', 0, 0, 'C')\n",
     "\n",
     "    def add_property_details(self, image_path, property_data):\n",
@@ -67,56 +64,48 @@
     "        margin = 20\n",
     "        self.set_left_margin(margin)\n",
     "        self.set_right_margin(margin)\n",
+    "                \n",
+    "        available_width = self.w - (2 * margin) #ancho disponible\n",
     "        \n",
-    "        # Calcular ancho disponible\n",
-    "        available_width = self.w - (2 * margin)\n",
+    "        # Proporción de columnas (60% - 40%)\n",
+    "        left_column_width = available_width * 0.60  \n",
+    "        right_column_width = available_width * 0.40 \n",
+    "            \n",
+    "        initial_y = 85 # Posición Y inicial\n",
     "        \n",
-    "        # Definir proporción de columnas (60% - 40%)\n",
-    "        left_column_width = available_width * 0.60  # 60% del espacio disponible\n",
-    "        right_column_width = available_width * 0.40  # 40% del espacio disponible\n",
-    "        \n",
-    "        # Posición Y inicial\n",
-    "        initial_y = 85\n",
-    "        \n",
-    "        # Agregar imagen de la propiedad (columna izquierda)\n",
+    "        # Imagen de la propiedad (columna izquierda)\n",
     "        self.image(image_path, x=margin, y=initial_y, w=left_column_width - 7)\n",
-    "        # Establecer color de línea (RGB)\n",
-    "        self.set_draw_color(100,149,237)  # Color gris\n",
-    "        # Dibujar línea divisoria\n",
+    "        \n",
+    "        # línea divisoria\n",
+    "        self.set_draw_color(100,149,237)  \n",
     "        line_x = margin + left_column_width\n",
     "        self.line(line_x, initial_y, line_x, initial_y + 100)\n",
     "        \n",
-    "        # Configurar detalles de la propiedad (columna derecha)\n",
-    "        x_second_column = margin + left_column_width + 7\n",
-    "        \n",
+    "        # Detalles de la propiedad (columna derecha)\n",
+    "        x_second_column = margin + left_column_width + 7        \n",
     "        # Ubicación\n",
     "        self.set_xy(x_second_column, initial_y)\n",
     "        self.set_font('Arial', 'B', 14)\n",
-    "        self.cell(right_column_width - 10, 10, \"Ubicación de la propiedad\", 0, 1)\n",
-    "        \n",
+    "        self.cell(right_column_width - 10, 10, \"Ubicación de la propiedad\", 0, 1)        \n",
     "        self.set_xy(x_second_column, initial_y + 10)\n",
     "        self.set_font('Arial', '', 12)\n",
     "        self.multi_cell(right_column_width - 10, 5, property_data['ubicacion'])\n",
-    "        \n",
     "        # Valor\n",
     "        self.set_xy(x_second_column, initial_y + 35)\n",
     "        self.set_font('Arial', 'B', 14)\n",
-    "        self.cell(right_column_width - 10, 10, \"Valor de la Propiedad\", 0, 1)\n",
-    "        \n",
+    "        self.cell(right_column_width - 10, 10, \"Valor de la Propiedad\", 0, 1)        \n",
     "        self.set_xy(x_second_column, initial_y + 45)\n",
     "        self.set_font('Arial', '', 12)\n",
-    "        self.cell(right_column_width - 10, 10, f\"${property_data['valor']:,}\", 0, 1)\n",
-    "        \n",
+    "        self.cell(right_column_width - 10, 10, f\"${property_data['valor']:,}\", 0, 1)        \n",
     "        # Fecha\n",
     "        self.set_xy(x_second_column, initial_y + 60)\n",
     "        self.set_font('Arial', 'B', 14)\n",
-    "        self.cell(right_column_width - 10, 10, \"Fecha de entrega\", 0, 1)\n",
-    "        \n",
+    "        self.cell(right_column_width - 10, 10, \"Fecha de entrega\", 0, 1)        \n",
     "        self.set_xy(x_second_column, initial_y + 70)\n",
     "        self.set_font('Arial', '', 12)\n",
     "        self.cell(right_column_width - 10, 10, property_data['fecha'], 0, 1)\n",
     "\n",
-    "# Crear instancia de PDF\n",
+    "# Instancia de PDF\n",
     "pdf = PDF(format='Letter')\n",
     "pdf.alias_nb_pages()\n",
     "pdf.add_page()\n",
@@ -127,11 +116,8 @@
     "    'valor': 3500000,\n",
     "    'fecha': '26/06/2024'\n",
     "}\n",
-    "\n",
-    "# Agregar detalles de la propiedad\n",
     "pdf.add_property_details('tools/Propiedad.jpg', property_data)\n",
     "\n",
-    "# Generar PDF\n",
     "pdf.output('Explorador_1.pdf')"
    ]
   }
